--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,5 @@
 ﻿<%- include('partials/header') %>
-<div class="form-container">
+<div class="form-container login">
     <h2>Login</h2>
     <% if(locals.error) { %>
         <div class="alert alert-danger"><%= error %></div>
