--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 ﻿    <div class="credits text-center">
         <p>
-            Copyright Danya Stoyanova
+            Copyright <b>Danya Stoyanova</b> & <b>Ivo Hristov</b>
         </p>
     </div>
 </body>
