--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,15 +7,18 @@
     <style type="text/css">
         body {
             padding-top: 100px;
+            background: url(http://ourgrandlife.com/wp-content/uploads/2016/02/best-books-book-youll-ever-read-910x600.jpg) no-repeat;
+            background-size: 100% auto;
+            color: #fff;
+            padding-right: 40%;
         }
 
         .form-container {
             width: 400px;
-            margin: auto;
+            margin: 0 auto;
         }
 
         .credits {
-            border-top: 1px solid #ddd;
             margin-top: 40px;
             padding-top: 20px;
         }
